@@ -1,9 +1,11 @@
+DIST calculate-1.3.10.tar.bz2 172084 RMD160 7d73da9a23d80e333e4d67f91f8d978ff4699252 SHA1 2b22872037ecc30f9c0351e234e59cffd7f8f5ae SHA256 1bd2dd6d76c11c85b734985c9b3156e1458017226dfd6128da463a4125ffbf93
 DIST calculate-1.3.7.tar.bz2 208300 RMD160 7bfbfef3a8adcb2dbce00fc19aaf85ad89fae1c5 SHA1 46faa0074ca00e4dc8ad57204005a7b0a15a5816 SHA256 47071c948f77be4c6726d5583e84d56f2309ad803523d6d29337dee6ceb81742
 DIST calculate-1.3.8.tar.bz2 196312 RMD160 1200bfdfea1da3ca9eccdebb6e53dd8cee48b8d8 SHA1 e64f350cf506c6104192e927197b85305cb99d6f SHA256 d17cb1f4532730257f57d1228f7021d77173d1af9af85b6d723cfe603c4e6e1b
 DIST calculate-1.3.9.tar.bz2 169490 RMD160 61f11bebc6f1d834173f81511701b915db1b0e62 SHA1 0fde1894b7f1efe930c612277b7e33bd08f5ecc9 SHA256 c7c85b72424c076073dfbfcefffc5cc61500e7445f9fcae8b071ff5fd0d60c5d
+EBUILD calculate-1.3.10.ebuild 1901 RMD160 f9682e0ae7f54e3e93e9e6af6e1c37019911a39c SHA1 0cd0e54baa675ca7ee14b5685ff160e3dc02e81c SHA256 6ed3bec96c2835f94ebbb566dff268819e129afc766dbe915e50b4ed19c4e149
 EBUILD calculate-1.3.7.ebuild 1893 RMD160 6946189fad4177600d4c6edf98a0808db123e372 SHA1 5ad4118b1ed1af01963cf6d94ee52abf513238b5 SHA256 66e7a9588dbde86ea086c1def210886b321956f973b0f7441c0c5827666d19b5
 EBUILD calculate-1.3.8.ebuild 1895 RMD160 e1f57d7afe84d48a49ba99a31b4b1983df9188a5 SHA1 9880616b6fafb02e325e39db55839b82be0ba53b SHA256 75658041c65ced32e0aa7a034219f5dfa004d0a3e9ccad9e8d294cd320c6105b
 EBUILD calculate-1.3.9.ebuild 1893 RMD160 6946189fad4177600d4c6edf98a0808db123e372 SHA1 5ad4118b1ed1af01963cf6d94ee52abf513238b5 SHA256 66e7a9588dbde86ea086c1def210886b321956f973b0f7441c0c5827666d19b5
 EBUILD calculate-9999.ebuild 1475 RMD160 8f4e0606edf7539f9a485a0e5c5cb620d4632001 SHA1 1b9503b0bbe26d243b524571cc3bbb29af950199 SHA256 33381697753a42456a777e57110f261f4f56da7f6205d0b37867013e8104e4b9
-MISC ChangeLog 729 RMD160 9bb5641fc223fa5539edb71cf0ae0082c2c6af4c SHA1 83c61eede2d5ed2c6d4bd2fdebe358809838c597 SHA256 dfb6f1c5b02dea24b64ccf74c991208700498d97e391a396549d973117298903
+MISC ChangeLog 867 RMD160 07080d97854376bc803ebec16decaee346d9a020 SHA1 c0f014fa25cb5720b378d3ab5d952702d33f6fdc SHA256 c35b41822620f83ffe4c6569754dc97b7cebdd5c9dae31762c21bacd95151b52
 MISC metadata.xml 301 RMD160 2b89953e755d47fdc10f6def8e9d30975ed5aba1 SHA1 fa349945c077ca3d0fd95693f04a60f2da15f467 SHA256 074eff7c846f7fc8f0e74e0d992bdda9432164f28c0f3cf8991a1e59aac38700
