@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/calculate
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*calculate-1.3.10 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-1.3.10.ebuild:
+  Bump version.
 
 *calculate-1.3.2 (03 Dec 2009)
 
